debugged js and css files. Still having issues with the character div as it wont stop jumping

--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,11 @@
     height: 50px;
     background-color: red;
     position: relative;
-    animation: jump 500ms infinite
+    animation: jump 500ms infinite;
     top: 150px;
 }
 .animate{
-    animation: jump 500ms infinite;
+    animation: jump 500ms;
 }
 @keyframes jump {
     0%{top: 150px;}
@@ -36,4 +36,7 @@
 @keyframes block {
     0%{left:480px;}
     100%{left:-40px;}
+}
+p{
+    text-align: center;
 }
